created general page outline

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Welcome to Pat's Salmon Cookies!</title>
-
   </head>
 
   <body>
     <header>
       <h1>Welcome to Pat's Salmon Cookies!</h1>
-      <nav>
+      <nav class="links">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="sales.html">Sales Data</a></li>
@@ -20,16 +19,17 @@
     </header>
 
     <main>
-      <img src="images/pats-salmon.png" alt="A large salmon with its mouth agape.">
-      <br>
 
+
+      <img
+        src="images/pats-salmon.png"
+        alt="A large salmon with its mouth agape."
+      />
+      <br />
     </main>
 
     <footer>
       <p>&copy;2023 Pat's Salmon Cookies</p>
-
     </footer>
-
   </body>
-
 </html>
