--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <footer>
       <p>&copy;2023 Pat's Salmon Cookies</p>
     </footer>
+    <script src="js/app.js"></script>
   </body>
 </html>
