--- a/sales.html
+++ b/sales.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <title>Welcome to Pat's Salmon Cookies!</title>
   </head>
 
@@ -19,11 +21,16 @@
     </header>
 
     <main>
-      <div id="seattle">
-        <h2>Seattle</h2>
-        <p></p>
-        
-      </div>
+      <h2>Seattle</h2>
+   <ul class="seattle">
+
+
+   </ul>
+
+   <h2>Tokyo</h2>
+   <ul class = tokyo>
+
+   </ul>
 
 
 
