--- a/sales.html
+++ b/sales.html
@@ -21,17 +21,34 @@
     </header>
 
     <main>
-      <h2>Seattle</h2>
-   <ul class="seattle">
 
+      <table>
+        <thead>
+          <tr>
+            <th>Location</th>
+            <th>6am</th>
+            <th>7am</th>
+            <th>8am</th>
+            <th>9am</th>
+            <th>10am</th>
+            <th>11am</th>
+            <th>12pm</th>
+            <th>1pm</th>
+            <th>2pm</th>
+            <th>3pm</th>
+            <th>4pm</th>
+            <th>5pm</th>
+            <th>6pm</th>
+            <th>7pm</th>
+          </tr>
+        </thead>
 
-   </ul>
+        <tbody id="stores">
+          <!-- stores RENDER IN HERE .... -->
+        </tbody>
 
-   <h2>Tokyo</h2>
-   <ul class = tokyo>
-
-   </ul>
-
+        <tfoot>
+        </tfoot>
 
 
     </main>
