adds footer and footer math

--- a/sales.html
+++ b/sales.html
@@ -26,20 +26,20 @@
         <thead>
           <tr>
             <th>Location</th>
-            <th>6am</th>
-            <th>7am</th>
-            <th>8am</th>
-            <th>9am</th>
-            <th>10am</th>
-            <th>11am</th>
-            <th>12pm</th>
-            <th>1pm</th>
-            <th>2pm</th>
-            <th>3pm</th>
-            <th>4pm</th>
-            <th>5pm</th>
-            <th>6pm</th>
-            <th>7pm</th>
+            <th>6:00am</th>
+            <th>7:00am</th>
+            <th>8:00am</th>
+            <th>9:00am</th>
+            <th>10:00am</th>
+            <th>11:00am</th>
+            <th>12:00pm</th>
+            <th>1:00pm</th>
+            <th>2:00pm</th>
+            <th>3:00pm</th>
+            <th>4:00pm</th>
+            <th>5:00pm</th>
+            <th>6:00pm</th>
+            <th>7:00pm</th>
           </tr>
         </thead>
 
@@ -47,7 +47,8 @@
           <!-- stores RENDER IN HERE .... -->
         </tbody>
 
-        <tfoot>
+        <tfoot id="totals">
+          <!--total sold for each location by hour-->
         </tfoot>
 
 
