Completed all totals

--- a/sales.html
+++ b/sales.html
@@ -40,6 +40,7 @@
             <th>5:00pm</th>
             <th>6:00pm</th>
             <th>7:00pm</th>
+            <th>Totals</th>
           </tr>
         </thead>
 
