added home info

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Welcome to Pat's Salmon Cookies!</title>
   </head>
@@ -22,13 +25,53 @@
     </header>
 
     <main>
-
-
       <img
         src="images/pats-salmon.png"
         alt="A large salmon with its mouth agape."
       />
-      <br />
+
+        <section class="stores">
+    <div class="store">
+      <h2>Seattle</h2>
+      <ul>
+        <li>Hours: 6 AM - 7 PM</li>
+        <li>Location: 123 Main St</li>
+        <li>Location: 2901 3rd Ave #300, Seattle, WA 98121</li>
+      </ul>
+    </div>
+    <div class="store">
+      <h2>Tokyo</h2>
+      <ul>
+        <li>Hours Open: 6am - </li>
+        <li>Contact Info: 123-456-7890</li>
+        <li>Location: 2901 3rd Ave #300, Tokyo</li>
+      </ul>
+    </div>
+    <div class="store">
+      <h2>Dubai</h2>
+      <ul>
+        <li>Hours: 8 AM - 9 PM</li>
+        <li>Location: 789 Oak St</li>
+        <li>Location: 2901 3rd Ave #300, Dubai</li>
+      </ul>
+    </div>
+    <div class="store">
+      <h2>Paris</h2>
+      <ul>
+        <li>Hours: 9 AM - 10 PM</li>
+        <li>Location: 101 Pine St</li>
+        <li>Location: 2901 3rd Ave #300, Paris</li>
+      </ul>
+    </div>
+    <div class="store">
+      <h2>Lima</h2>
+      <ul>
+        <li>Hours: 10 AM - 11 PM</li>
+        <li>Location: 202 Birch St</li>
+        <li>Location: 2901 3rd Ave #300, Lima</li>
+      </ul>
+    </div>
+  </section>
     </main>
 
     <footer>
