main page refactor, light syling

--- a/index.html
+++ b/index.html
@@ -30,53 +30,14 @@
         alt="A large salmon with its mouth agape."
       />
 
-        <section class="stores">
-    <div class="store">
-      <h2>Seattle</h2>
-      <ul>
-        <li>Hours: 6 AM - 7 PM</li>
-        <li>Location: 123 Main St</li>
-        <li>Location: 2901 3rd Ave #300, Seattle, WA 98121</li>
-      </ul>
-    </div>
-    <div class="store">
-      <h2>Tokyo</h2>
-      <ul>
-        <li>Hours Open: 6am - </li>
-        <li>Contact Info: 123-456-7890</li>
-        <li>Location: 2901 3rd Ave #300, Tokyo</li>
-      </ul>
-    </div>
-    <div class="store">
-      <h2>Dubai</h2>
-      <ul>
-        <li>Hours: 8 AM - 9 PM</li>
-        <li>Location: 789 Oak St</li>
-        <li>Location: 2901 3rd Ave #300, Dubai</li>
-      </ul>
-    </div>
-    <div class="store">
-      <h2>Paris</h2>
-      <ul>
-        <li>Hours: 9 AM - 10 PM</li>
-        <li>Location: 101 Pine St</li>
-        <li>Location: 2901 3rd Ave #300, Paris</li>
-      </ul>
-    </div>
-    <div class="store">
-      <h2>Lima</h2>
-      <ul>
-        <li>Hours: 10 AM - 11 PM</li>
-        <li>Location: 202 Birch St</li>
-        <li>Location: 2901 3rd Ave #300, Lima</li>
-      </ul>
-    </div>
+        <section id="storeInfo">
+
   </section>
     </main>
 
     <footer>
       <p>&copy;2023 Pat's Salmon Cookies</p>
     </footer>
-    <script src="js/app.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
