--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet">
     <title>Welcome to Pat's Salmon Cookies!</title>
   </head>
 
@@ -21,21 +22,31 @@
     </header>
 
     <main>
-       <form id='cookieAdder'>
-    <fieldset>
-      <legend>Add a new store to the table!!!</legend>
 
-      <input name='Location Name' id='locationName' placeholder='Location Name' required />
+      <form id='cookieAdder'>
+        <fieldset>
+          <legend>Add a new store to the table!!!</legend>
+          <label for="locationName">Location Name:</label>
+          <input type="text" id="locationName" name="Location Name"
+            placeholder="Location Name" required />
 
-      <input type="number" name='Minimum customers' id='minCustomers' required placeholder="Minimum Customers">
+          <label for="minCustomers">Minimum Customers Per Hour:</label>
+          <input type="number" id="minCustomers" name="Minimum customers"
+            placeholder="Minimum Customers" required />
 
-      <input type="number" name='Maximum Customers' id='maxCustomers' required placeholder="Maximum Customers">
+          <label for="maxCustomers">Maximum Customers Per Hour:</label>
+          <input type="number" id="maxCustomers" name="Maximum Customers"
+            placeholder="Maximum Customers" required />
 
-      <input type="number" name='Average cookies' id='avgCookie' required placeholder="Average Cookies">
+          <label for="avgCookie">Average Cookies Per Sale:</label>
+          <input type="number" id="avgCookie" name="Average cookies"
+            placeholder="Average Cookies" required />
 
-    </fieldset>
-    <button type='submit' id='submitButton'>Click here to add!</button>
-  </form>
+          <button type='submit' id='submitButton'>Click here to add!</button>
+        </fieldset>
+
+      </form>
+
       <table>
 
         <thead>
@@ -58,7 +69,6 @@
             <th>Totals</th>
           </tr>
         </thead>
-      </thead>
 
         <tbody id="stores">
           <!-- stores RENDER IN HERE .... -->
@@ -68,12 +78,11 @@
           <!--total sold for each location by hour-->
         </tfoot>
 
+      </main>
 
-    </main>
-
-    <footer>
-      <p>&copy;2023 Pat's Salmon Cookies</p>
-    </footer>
-    <script src="js/app.js"></script>
-  </body>
-</html>
+      <footer>
+        <p>&copy;2023 Pat's Salmon Cookies</p>
+      </footer>
+      <script src="js/app.js"></script>
+    </body>
+  </html>
