--- a/sales.html
+++ b/sales.html
@@ -28,19 +28,19 @@
           <legend>Add a new store to the table!!!</legend>
           <label for="locationName">Location Name:</label>
           <input type="text" id="locationName" name="Location Name"
-            placeholder="Location Name" required />
+            placeholder="" required />
 
           <label for="minCustomers">Minimum Customers Per Hour:</label>
           <input type="number" id="minCustomers" name="Minimum customers"
-            placeholder="Minimum Customers" required />
+            placeholder="" required />
 
           <label for="maxCustomers">Maximum Customers Per Hour:</label>
           <input type="number" id="maxCustomers" name="Maximum Customers"
-            placeholder="Maximum Customers" required />
+            placeholder="" required />
 
           <label for="avgCookie">Average Cookies Per Sale:</label>
           <input type="number" id="avgCookie" name="Average cookies"
-            placeholder="Average Cookies" required />
+            placeholder="" required />
 
           <button type='submit' id='submitButton'>Click here to add!</button>
         </fieldset>
@@ -71,7 +71,7 @@
         </thead>
 
         <tbody id="stores">
-          <!-- stores RENDER IN HERE .... -->
+          <!-- stores render here.... -->
         </tbody>
 
         <tfoot id="totals">
