home page final touches

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     </header>
 
     <main>
-      <img
-        src="images/pats-salmon.png"
-        alt="A large salmon with its mouth agape."
-      />
+      <div class="salmon">
+        <img
+          src="images/pats-salmon.png"
+          alt="A large salmon with its mouth agape."
+        />
+      </div>
 
-        <section id="storeInfo">
-
-  </section>
+      <section id="storeInfo"></section>
     </main>
 
     <footer>
